--- a/Ehelp/Info.plist
+++ b/Ehelp/Info.plist
@@ -20,18 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-<!--    <key>NSLocationAlwaysUsageDescription</key>-->
-<!--    <string>This application requires location services to work</string>-->
-<!--    <key>NSLocationWhenInUseUsageDescription</key>-->
-<!--    <string>This application requires location services to work</string>-->
-<key>NSLocationAlwaysUsageDescription</key>
-<string>Program requires GPS to track cars and job orders</string>
-<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-<string>Program requires GPS to track cars and job orders</string>
-<key>NSLocationWhenInUseUsageDescription</key>
-<string>Program requires GPS to track cars and job orders</string>
-<key>NSMicrophoneUsageDescription</key>
-<string>This app uses your Microphone to allow Voice over IP communication with the Program Admin system</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Program requires GPS to track cars and job orders</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Program requires GPS to track cars and job orders</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Program requires GPS to track cars and job orders</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app uses your Microphone to allow Voice over IP communication with the Program Admin system</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -53,5 +49,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>To be able to login in the app</string>
 </dict>
 </plist>
